[homepage] Including layout

--- a/src/My/TodoListBundle/Resources/views/Default/index.html.twig
+++ b/src/My/TodoListBundle/Resources/views/Default/index.html.twig
@@ -1,1 +1,9 @@
-Welcome to MyTodoListBundle, the web based todo list manager!
+{% extends '::base.html.twig' %}
+
+{% block title %}
+    {{ parent() }} - Welcome!
+{% endblock %}
+
+{% block body %}
+    Welcome to MyTodoListBundle, the web based todo list manager!
+{% endblock %}
