--- a/src/My/TodoListBundle/Resources/views/Status/index.html.twig
+++ b/src/My/TodoListBundle/Resources/views/Status/index.html.twig
@@ -1,9 +1,9 @@
 {% extends 'MyTodoListBundle::layout.html.twig' %}
 
 {% block title %}
-    {{ parent() }} - Tasks
+    {{ parent() }} - Statuses
 {% endblock %}
 
 {% block body %}
-    <h1>Tasks</h1>
+    <h1>Statuses</h1>
 {% endblock %}
