Refactoring Default controller to Home controller

--- a/src/My/TodoListBundle/Resources/views/Home/index.html.twig
+++ b/src/My/TodoListBundle/Resources/views/Home/index.html.twig
@@ -1,13 +1,13 @@
 {% extends 'MyTodoListBundle::layout.html.twig' %}
 
 {% block title %}
-    {{ parent() }} - Welcome!
+    {{ parent() }} - Home
 {% endblock %}
 
 {% block body %}
-    <h1>Welcome to MyTodoListBundle!</h1>
+    <h1>Home</h1>
 
     <p>
-        MyTodoListBundle, the web based todo list manager!
+        Welcome to MyTodoListBundle, the web based todo list manager!
     </p>
 {% endblock %}
