--- a/src/My/TodoListBundle/Resources/views/layout.html.twig
+++ b/src/My/TodoListBundle/Resources/views/layout.html.twig
@@ -1,25 +1,18 @@
-<!DOCTYPE html>
-<html>
-    <head>
-        <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
-        <title>
-            {% block title %}MyTodoListBundle{% endblock %}
-        </title>
+{% extends 'DhgamacheSkeletonBundle::layout.html.twig' %}
 
-        {% block stylesheets %}
-            <link rel="stylesheet" href="{{ asset('bundles/mytodolist/css/body.css') }}" type="text/css" media="all" />
-            <link rel="stylesheet" href="{{ asset('bundles/mytodolist/css/menu.css') }}" type="text/css" media="all" />
-        {% endblock %}
+{% block title %}
+    MyTodoListBundle
+{% endblock %}
 
-        <link rel="shortcut icon" href="{{ asset('favicon.ico') }}" />
-    </head>
-    <body>
-        <nav>
-            {{ knp_menu_render('MyTodoListBundle:Builder:mainMenu') }}
-        </nav>
+{% block stylesheets %}
+    <link rel="stylesheet" href="{{ asset('bundles/mytodolist/css/body.css') }}" type="text/css" media="all" />
+    <link rel="stylesheet" href="{{ asset('bundles/mytodolist/css/menu.css') }}" type="text/css" media="all" />
+{% endblock %}
 
-        {% block body %}{% endblock %}
+{% block content %}
+    <nav>
+        {{ knp_menu_render('MyTodoListBundle:Builder:mainMenu') }}
+    </nav>
 
-        {% block javascripts %}{% endblock %}
-    </body>
-</html>
+    {% block body %}{% endblock %}
+{% endblock %}
