[skeleton] Adapting templates to skeleton format

--- a/src/My/TodoListBundle/Resources/views/Home/index.html.twig
+++ b/src/My/TodoListBundle/Resources/views/Home/index.html.twig
@@ -5,9 +5,11 @@
 {% endblock %}
 
 {% block body %}
-    <h1>Home</h1>
+    <div class="twelve columns offset-by-one content">
+        <h1>Home</h1>
 
-    <p>
-        Welcome to MyTodoListBundle, the web based todo list manager!
-    </p>
+        <p>
+            Welcome to MyTodoListBundle, the web based todo list manager!
+        </p>
+    </div>
 {% endblock %}
