--- a/src/My/TodoListBundle/Resources/views/Task/index.html.twig
+++ b/src/My/TodoListBundle/Resources/views/Task/index.html.twig
@@ -5,5 +5,7 @@
 {% endblock %}
 
 {% block body %}
-    <h1>Tasks</h1>
+    <div class="twelve columns offset-by-one content">
+        <h1>Tasks</h1>
+    </div>
 {% endblock %}
