--- a/src/My/TodoListBundle/Resources/views/Task/index.html.twig
+++ b/src/My/TodoListBundle/Resources/views/Task/index.html.twig
@@ -5,7 +5,7 @@
 {% endblock %}
 
 {% block body %}
-    <div class="twelve columns offset-by-one content">
+    <div class="fourteen columns content">
         <h1>Tasks</h1>
     </div>
 {% endblock %}
