--- a/src/My/TodoListBundle/Resources/views/layout.html.twig
+++ b/src/My/TodoListBundle/Resources/views/layout.html.twig
@@ -10,7 +10,7 @@
 {% endblock %}
 
 {% block content %}
-    <div class="three columns sidebar">
+    <div class="two columns sidebar">
         <nav>
             {{ knp_menu_render('MyTodoListBundle:Builder:mainMenu') }}
         </nav>
