--- a/src/My/TodoListBundle/Resources/public/css/body.css
+++ b/src/My/TodoListBundle/Resources/public/css/body.css
@@ -14,13 +14,14 @@
  */
 
 body {
-     font-family: Arial, sans-serif;
-     font-size: 16px;
-     color: #444444;
+    margin-top: 43px;
+    font-family: Arial, sans-serif;
+    font-size: 16px;
+    color: #444444;
 }
 
 h1 {
-     color: #2A5DB0;
-     font-size: 25px;
-     border-bottom: 1px solid #E5E5E5;
+    color: #2A5DB0;
+    font-size: 25px;
+    border-bottom: 1px solid #E5E5E5;
 }
